# men-port-genai

./: .gitignore  README.md  replacements.txt
challenges/02-email-drafting-agent/: README.md  agentos_config.yaml  email_generator.py  main.py  pyproject.toml  test.py
challenges/97-translate-text-agent/: README.md  main.py  pyproject.toml
challenges/98-weather-agent/: main.py  pyproject.toml
challenges/99-current-date/: main.py  pyproject.toml
challenges/99-current-date/cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
